# routers/api/v1/article.go
@@ -2,10 +2,12 @@ package v1
 
 import (
 	"gin_example/models"
+	"gin_example/pkg/app"
 	"gin_example/pkg/e"
-	log "gin_example/pkg/logging"
 	"gin_example/pkg/setting"
 	"gin_example/pkg/util"
+	"gin_example/service/articleService"
+	"gin_example/service/tagService"
 	"net/http"
 	"strings"
 
@@ -14,7 +16,8 @@ import (
 	"github.com/unknwon/com"
 )
 
-// TODO 涉及幂等性校验的部分需要用事务实现
+// TODO 1.涉及幂等性校验的部分需要用事务实现
+// TODO 2.如果用到了Redis那就要考虑将所有的操作都迁移使用Redis否则将导致数据不一致
 
 // 获取单个文章
 // @Summary GetArticles List
@@ -26,31 +29,45 @@ import (
 // @Failure 10003 {string} json "{"code":10003,"data":{},"msg":"文章不存在"}"
 // @Router /api/v1/article/{id} [get]
 func GetArticle(c *gin.Context) {
+	appG := &app.Gin{C: c}
 	id := com.StrTo(c.Param("id")).MustInt()
 
 	code := e.INVALID_PARAMS
 	var data interface{}
+	var err error
+	var exists bool
+	var articleS articleService.Article
 	// 参数提前校验
 	valid := validation.Validation{}
 	valid.Min(id, 1, "id").Message("ID 必须大于0")
-	if !valid.HasErrors() {
-		if models.ExistArticleByID(id) {
-			data = models.GetArticle(id)
-			code = e.SUCCESS
-		} else {
-			code = e.ERROR_NOT_EXIST_ARTICLE
-		}
-	} else {
-		for _, err := range valid.Errors {
-			log.InfoF("err.key: %s, err.message: %s", err.Key, err.Message)
-		}
+
+	// 参数校验失败
+	if valid.HasErrors() {
+		app.MarkErrors(valid.Errors)
+		appG.Response(http.StatusOK, code, data)
+		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": code,
-		"msg":  e.GetMsg(code),
-		"data": data,
-	})
+	articleS = articleService.Article{ID: id}
+	exists, err = articleS.ExistArticleByID()
+	if err != nil {
+		code = e.ERROR_CHECK_ARTICLE_EXISTS
+		goto reply
+	}
+	if !exists {
+		code = e.ERROR_NOT_EXIST_ARTICLE
+		goto reply
+	}
+
+	data, err = articleS.Get()
+	if err != nil {
+		code = e.ERROR_GET_ARTICLE_FAIL
+		goto reply
+	}
+	code = e.SUCCESS
+
+reply:
+	appG.Response(http.StatusOK, code, data)
 }
 
 // 获取多个文章
@@ -65,6 +82,7 @@ func GetArticle(c *gin.Context) {
 // @Success 200 {string} string "ok"
 // @Router /api/v1/articles [get]
 func GetArticles(c *gin.Context) {
+	appG := &app.Gin{C: c}
 	data := make(map[string]interface{})
 	maps := make(map[string]interface{}) // 用于组织查询条件
 	valid := validation.Validation{}
@@ -86,22 +104,18 @@ func GetArticles(c *gin.Context) {
 	}
 
 	code := e.INVALID_PARAMS
-	if !valid.HasErrors() {
-		code = e.SUCCESS
-
-		data["lists"] = models.GetArticles(util.GetPage(c), setting.PageSize, maps)
-		data["total"] = models.GetArticleTotal(maps)
-	} else {
-		for _, err := range valid.Errors {
-			log.InfoF("err.key: %s, err.message: %s", err.Key, err.Message)
-		}
+	if valid.HasErrors() {
+		app.MarkErrors(valid.Errors)
+		goto reply
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": code,
-		"msg":  e.GetMsg(code),
-		"data": data,
-	})
+	code = e.SUCCESS
+
+	data["lists"] = models.GetArticles(util.GetPage(c), setting.AppSetting.PageSize, maps)
+	data["total"] = models.GetArticleTotal(maps)
+
+reply:
+	appG.Response(http.StatusOK, code, data)
 }
 
 // 新增文章
@@ -115,16 +129,20 @@ func GetArticles(c *gin.Context) {
 // @Param content query string true "Content"
 // @Param created_by query string true "CreatedBy"
 // @Param state query int false "State"
+// @Param cover_image_url query string false "coverImageUrl"
 // @Success 200 {string} string "ok"
 // @Failure 10002 {string} json "{"code":10002,"data":{},"msg":"Tag不存在"}"
 // @Router /api/v1/article [put]
 func AddArticle(c *gin.Context) {
+	appG := &app.Gin{C: c}
+
 	tagId := com.StrTo(c.Query("tag_id")).MustInt()
 	title := c.Query("title")
 	desc := c.Query("desc")
 	content := c.Query("content")
 	createdBy := c.Query("created_by")
 	state := com.StrTo(strings.Trim(c.Query("state"), " ")).MustInt()
+	coverImageUrl := c.Query("cover_image_url")
 
 	valid := validation.Validation{}
 	valid.Min(tagId, 1, "tag_id").Message("标签ID必须大于0")
@@ -134,34 +152,40 @@ func AddArticle(c *gin.Context) {
 	valid.MaxSize(desc, 255, "desc").Message("简述最长为255字符")
 	valid.Required(createdBy, "created_by").Message("创建人不能为空")
 	valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
+	valid.MaxSize(coverImageUrl, 255, "cover_image_url").Message("文件路径最长为255字符")
 
+	data := make(map[string]interface{})
 	code := e.INVALID_PARAMS
-	if !valid.HasErrors() {
-		if models.ExistTagByID(tagId) {
-			data := make(map[string]interface{})
-			data["tag_id"] = tagId
-			data["title"] = title
-			data["desc"] = desc
-			data["content"] = content
-			data["created_by"] = createdBy
-			data["state"] = state
-
-			models.AddArticle(data)
-			code = e.SUCCESS
-		} else {
-			code = e.ERROR_NOT_EXITS_TAG
-		}
-	} else {
-		for _, err := range valid.Errors {
-			log.InfoF("err.key: %s, err.message: %s", err.Key, err.Message)
-		}
+	// 参数校验失败
+	if valid.HasErrors() {
+		app.MarkErrors(valid.Errors)
+		appG.Response(http.StatusOK, code, data)
+		return
+	}
+	// TODO 这里没有ID了是不是就查不了了，只能去查Tag是不是存在
+	tagService := tagService.Tag{ID: tagId}
+	exist, err := tagService.ExistTagByID()
+	if err != nil {
+		code = e.ERROR_CHECK_TAG_EXISTS
+		goto reply
+	}
+	if !exist {
+		code = e.ERROR_NOT_EXITS_TAG
+		goto reply
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": code,
-		"msg":  e.GetMsg(code),
-		"data": make(map[string]interface{}),
-	})
+	data["tag_id"] = tagId
+	data["title"] = title
+	data["desc"] = desc
+	data["content"] = content
+	data["created_by"] = createdBy
+	data["state"] = state
+	data["cover_image_url"] = coverImageUrl
+	models.AddArticle(data)
+	code = e.SUCCESS
+
+reply:
+	appG.Response(http.StatusOK, code, make(map[string]interface{}))
 }
 
 // 修改文章
@@ -174,11 +198,13 @@ func AddArticle(c *gin.Context) {
 // @Param title query string false "Title"
 // @Param content query string false "Content"
 // @Param modified_by query string true "ModifiedBy"
+// @Param cover_image_url query string false "coverImageUrl"
 // @Param state query int false "State"
 // @Success 200 {string} string "ok"
 // @Failure 10003 {string} json "{"code":10003,"data":{},"msg":"文章不存在"}"
 // @Router /api/v1/article/{id} [post]
 func EditArticle(c *gin.Context) {
+	appG := &app.Gin{C: c}
 	valid := validation.Validation{}
 	id := com.StrTo(c.Param("id")).MustInt()
 	tagId := com.StrTo(c.Query("tag_id")).MustInt()
@@ -186,6 +212,7 @@ func EditArticle(c *gin.Context) {
 	desc := c.Query("desc")
 	content := c.Query("content")
 	modifiedBy := c.Query("modified_by")
+	coverImageUrl := c.Query("cover_image_url")
 
 	// 参数校验
 	var state int = -1
@@ -200,41 +227,55 @@ func EditArticle(c *gin.Context) {
 	valid.MaxSize(content, 65535, "content").Message("内容最长为65535字符")
 	valid.Required(modifiedBy, "modified_by").Message("修改人不能为空")
 	valid.MaxSize(modifiedBy, 100, "modified_by").Message("修改人最长为100字符")
+	valid.MaxSize(coverImageUrl, 255, "cover_image_url").Message("文件路径最长为255")
 
 	code := e.INVALID_PARAMS
-	if !valid.HasErrors() {
-		if models.ExistArticleByID(id) {
-			data := make(map[string]interface{})
-			if tagId > 0 {
-				data["tag_id"] = tagId
-			}
-			if title != "" {
-				data["title"] = title
-			}
-			if desc != "" {
-				data["desc"] = desc
-			}
-			if content != "" {
-				data["content"] = content
-			}
-			data["modified_by"] = modifiedBy
 
-			models.EditArticle(id, data)
-			code = e.SUCCESS
-		} else {
-			code = e.ERROR_NOT_EXIST_ARTICLE
-		}
-	} else {
-		for _, err := range valid.Errors {
-			log.InfoF("err.key: %s, err.message: %s", err.Key, err.Message)
-		}
+	var exists bool
+	var err error
+	var articleS articleService.Article
+	data := make(map[string]interface{})
+
+	// 参数校验不通过
+	if valid.HasErrors() {
+		app.MarkErrors(valid.Errors)
+		goto reply
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": code,
-		"mg":   e.GetMsg(code),
-		"data": make(map[string]interface{}),
-	})
+	articleS = articleService.Article{ID: id}
+	exists, err = articleS.ExistArticleByID()
+
+	if err != nil {
+		code = e.ERROR_CHECK_ARTICLE_EXISTS
+		goto reply
+	}
+	if !exists {
+		code = e.ERROR_NOT_EXIST_ARTICLE
+		goto reply
+	}
+
+	if tagId > 0 {
+		data["tag_id"] = tagId
+	}
+	if title != "" {
+		data["title"] = title
+	}
+	if desc != "" {
+		data["desc"] = desc
+	}
+	if content != "" {
+		data["content"] = content
+	}
+	if coverImageUrl != "" {
+		data["cover_image_url"] = coverImageUrl
+	}
+	data["modified_by"] = modifiedBy
+
+	models.EditArticle(id, data)
+	code = e.SUCCESS
+
+reply:
+	appG.Response(http.StatusOK, code, make(map[string]interface{}))
 }
 
 // 删除文章
@@ -246,28 +287,34 @@ func EditArticle(c *gin.Context) {
 // @Failure 10003 {string} json "{"code":10003,"data":{},"msg":"文章不存在"}"
 // @Router /api/v1/article/{id} [Delete]
 func DeleteArticle(c *gin.Context) {
+	appG := &app.Gin{C: c}
 	id := com.StrTo(c.Param("id")).MustInt()
 	valid := validation.Validation{}
 
 	valid.Min(id, 1, "id").Message("ID必须大于0")
 
 	code := e.INVALID_PARAMS
-	if !valid.HasErrors() {
-		if models.ExistArticleByID(id) {
-			models.DeleteArticle(id)
-			code = e.SUCCESS
-		} else {
-			code = e.ERROR_NOT_EXIST_ARTICLE
-		}
-	} else {
-		for _, err := range valid.Errors {
-			log.InfoF("err.key: %s, err.message: %s", err.Key, err.Message)
-		}
+
+	if valid.HasErrors() {
+		app.MarkErrors(valid.Errors)
+		appG.Response(http.StatusOK, code, make(map[string]interface{}))
+		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": code,
-		"msg":  e.GetMsg(code),
-		"data": make(map[string]interface{}),
-	})
+	articleS := articleService.Article{ID: id}
+	exists, err := articleS.ExistArticleByID()
+	if err != nil {
+		code = e.ERROR_CHECK_ARTICLE_EXISTS
+		goto reply
+	}
+	if !exists {
+		code = e.ERROR_NOT_EXIST_ARTICLE
+		goto reply
+	}
+
+	models.DeleteArticle(id)
+	code = e.SUCCESS
+
+reply:
+	appG.Response(http.StatusOK, code, make(map[string]interface{}))
 }
